# ilakkani

./: MANIFEST.in  README.org  YENNAI_PADI.txt  bktree.py  bloom.py  pyproject.toml  requirements.txt  resources.py  thiruthi.py  utils.py
mlm/ilakkani/: bktree.py  bloom.py  kani.py  thiruthi.py  tokenizer.py  trie.py  valam.py
mlm/tharavu/: orungurri-chellumai-cholloadai.tsv  test.json  test.txt.thiruthi
moolam/thiruthathari/: resources.py  thiruthi.py  trie.py
tharavu/: test.txt
