[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "thiruthathari"
version = "0.0.1"
authors = [
  { name="vanangamudi", email="selva.developer@gmail.com" },
]
description = "a tower of spellcheckers for Tamil"
readme = "YENNAI_PADI.txt"
license = { file="LICENSE" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
             "bloom-filter==1.3.3",
             "editdistance==0.6.0",
             "Levenshtein==0.20.1",
             "Open-Tamil==1.1",
]

[project.urls]
"Homepage" = "https://github.com/vanangamudi/thiruthathari"
"Bug Tracker" = "https://github.com/vanangamudi/thiruthathari/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["moolam"]  # ["."] by default
include = ["*", 'resources.py']  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default